Fixed mobile sidebar visibility on Desktop

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -13044,6 +13044,9 @@ body {
   transition: all 0.3s;
   color: #ffffff;
 }
+.is-header .is-navbar__wrapper__sidebar {
+  display: none;
+}
 .is-header__intro {
   margin-top: 11.875rem;
 }
@@ -13653,7 +13656,7 @@ body {
   .is-header .is-navbar__wrapper-right {
     display: none;
   }
-  .is-header .is-navbar__wrapper #mobile-menu {
+  .is-header .is-navbar__wrapper__sidebar {
     position: fixed;
     top: 64px;
     bottom: 0;
@@ -13662,8 +13665,9 @@ body {
     left: -100%;
     width: 100%;
     transition: all 0.3s ease-in-out;
+    display: block;
   }
-  .is-header .is-navbar__wrapper #mobile-menu.show {
+  .is-header .is-navbar__wrapper__sidebar.show {
     left: 0;
     transition: all 0.3s ease-in-out;
   }
