--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -107,6 +107,9 @@ body {
           }
         }
       }
+      &__sidebar {
+        display: none;
+      }
     }
   }
   &__intro {
